--- a/day13_mapIT/map.html
+++ b/day13_mapIT/map.html
@@ -5,21 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Maps</title>
-    <style>
-        .main{
-            margin: auto;
-            width: 20%;
-        }
-.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}
-.mapouter{
-    margin: auto;
-    margin-top: 30px;
-    background-image: url("https://24wallpapers.com/app-gateway/wallpaper-uploads/wallpapers/22_01_2022/1642843469383_9.png");
-    background-position: center;
-
-    
-}
-    </style>
+    <link rel="stylesheet" href="map.css">
 </head>
 <body>
     <div class="main">
@@ -33,14 +19,6 @@
             <a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">how to get google map embed code</a></div></div>
 </body>
 </html>
-<script>
-
-var iframe=document.querySelector("#gmap_canvas")
-
-const getmap=()=>{
-    var name=document.querySelector(".city").value;
-    iframe.src=`https://maps.google.com/maps?q=${name}&t=&z=13&ie=UTF8&iwloc=&output=embed`
-
-}
+<script src="map.js">
 
 </script>
